2015-05-24  Charlie Zender  <zender@uci.edu>

	* Define regridded-variables in and copy their metadata to regridded file

	* Copy global and fixed-variable metadata to regridded file

	* Define fixed-variables in and copy their data to regridded file

	* Set new flg_rgr for input variables that contain "ncol" dimension

	* Complete grid metadata for output file

	* Add equi-angle latitude weights (also named "gw") to nco_rgr_map()

	* Add nco_vrs_att_cat() to all operators (was only in ncks, ncbo)

2015-05-22  Charlie Zender  <zender@uci.edu>

	* Output destination grid and coordinate metadata looks good in nco_rgr_map()

	* NCO 4.5.0 release procedure:
 	Changes since nco-4.4.9: fxm
	cd ~/nco;git commit -a -m "Version 4.5.0 release: "
	git tag -d 4.5.0;git push origin :refs/tags/4.5.0
	git tag -a 4.5.0 -m 'Version 4.5.0: ';git push --tags

	* Bump to 4.5.0-alpha1. Undo crippling of ncra --wgt wgt_nm for further debugging

	* NCO 4.4.9 release procedure:
 	Changes since nco-4.4.8: git, -x warn, crd att, cnk nco lfp, shuffle on, MM3->MM4 off, ncecat fix, climatology, ncra wgt
	cd ~/nco;git commit -a -m "Version 4.4.9 release: "
	git tag -d nco-4.4.9;git push origin :refs/tags/nco-4.4.9
	git tag -d 4.4.9;git push origin :refs/tags/4.4.9
	git tag -a 4.4.9 -m 'Version 4.4.9: Final Release';git push --tags

	* Cripple ncra. Re-tag. Re-release with new tag format so GitHub tarball naming conventions work.

2015-05-21  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.9 release procedure:
 	Changes since nco-4.4.8: git, -x warn, crd att, cnk nco lfp, shuffle on, MM3->MM4 off, ncecat fix, climatology, ncra wgt
	cd ~/nco;git commit -a -m "Version nco-4.4.9 release: "
	git tag -d nco-4.4.9;git push origin :refs/tags/nco-4.4.9
	git tag -a nco-4.4.9 -m 'Version 4.4.9: ';git push --tags

	* Put nco_sng2kvm() in nco_sng_utl.c where it belongs. Fixes configure link problems.

2015-05-20  Charlie Zender  <zender@uci.edu>

	* Allow wgt_nm to not be in extraction list
